snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1-sources.jar.sha512
2fa77f92d3c33721ee98630946b35c77a401e9b6a903a11006871466f653ccad1432a5aa1a7f1c07b9d8c860b606d5431d970f5d0af9412452d3c02aad01625d